--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 /* Header */
 header {
-    background-color: #2c3e50;
+    background-color: #65376e;
     color: white;
     padding: 20px;
     text-align: center;
@@ -90,7 +90,7 @@ article a {
 
 #podcast-episodes h2 {
     font-size: 2rem;
-    color: #34495e;
+    color: #3498db;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -155,7 +155,7 @@ main {
 
 /* Footer */
 footer {
-    background-color: #2c3e50;
+    background-color: #65376e;
     color: white;
     text-align: center;
     padding: 10px;
